--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+OE1t4CPmFiyrpY3ap497QC5b45RDRpSq3CY2ku7cdM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost/projektLCK
